I fixed someissues on the display card component, handeling the overflow problem I had with some panels that has tables inside, I changed the color on the game board because the white color mixe with the background, I set it red. I move the toggle them button to the image poper

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,26 +12,26 @@ body,
     }
 }
 
-// Scrollbar Styles
+// // Scrollbar Styles
 
-::-webkit-scrollbar {
-    width: 10px;
-}
+// ::-webkit-scrollbar {
+//     width: 10px;
+// }
 
-// Track
-::-webkit-scrollbar-track {
-    background: #e0e0e0;
-}
+// // Track
+// ::-webkit-scrollbar-track {
+//     background: #e0e0e0;
+// }
 
-// Handled
-::-webkit-scrollbar-thumb {
-    background: #888;
-}
+// // Handled
+// ::-webkit-scrollbar-thumb {
+//     background: #888;
+// }
 
-// Handle on Hover
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
+// // Handle on Hover
+// ::-webkit-scrollbar-thumb:hover {
+//     background: #555;
+// }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
@@ -175,7 +175,8 @@ button.active {
 
 .hamburger-menu {
     // background-color: rgba(51,51,51,0.9);
-    background-color: RGBA(156,174,169,0.7);
+    // background-color: RGBA(156,174,169,0.7);
+    background-color: RGB(127,128,140, 0.7);
     backdrop-filter: blur(5px);
     position: fixed;
     top: 0;
@@ -189,6 +190,36 @@ button.active {
 .hamburger-menu.open {
     left: 0;
 }
+
+/* Scrollbar */
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: #12171d;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #393e44;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555a61;
+  }
+  
+  ::-webkit-scrollbar-thumb:active {
+    background-color: #71767e;
+  }
+  
+  ::-webkit-scrollbar-corner {
+    background-color: #12171d;
+  }
+
+    // Handle on Hover
+    ::-webkit-scrollbar-thumb:hover {
+        background: #25282c;
+    }
 
 @keyframes beat {
     to { transform: scale(1.1); }
